--- a/src/ChatLinks/Resources/UI/MainWindow.de.resx
+++ b/src/ChatLinks/Resources/UI/MainWindow.de.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Items" xml:space="preserve">
-    <value>Objets</value>
+    <value>Gegenstände</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Liens de chat</value>
+    <value>Chat-Links</value>
   </data>
 </root>
