--- a/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.fr.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Items/Tooltips/ItemTooltipView.fr.resx
@@ -153,7 +153,7 @@
   <data name="Back Item" xml:space="preserve">
     <value>Objet de dos</value>
   </data>
-  <data name="Takes effect immediately upon receipt." xml:space="preserve">
+  <data name="Takes effect immediately upon receipt" xml:space="preserve">
     <value>Prend effet immédiatement après réception.</value>
   </data>
   <data name="Double-click to consume" xml:space="preserve">
