--- a/src/ChatLinks/Resources/UI/MainWindow.de.resx
+++ b/src/ChatLinks/Resources/UI/MainWindow.de.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Achievements" xml:space="preserve">
+    <value>Erfolge</value>
+  </data>
   <data name="Items" xml:space="preserve">
     <value>Gegenstände</value>
   </data>
