--- a/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.es.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.es.resx
@@ -141,4 +141,7 @@
   <data name="Reset" xml:space="preserve">
     <value>Restablecer</value>
   </data>
+  <data name="Completed" xml:space="preserve">
+    <value>Completado</value>
+  </data>
 </root>
