--- a/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.fr.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.fr.resx
@@ -141,4 +141,7 @@
   <data name="Reset" xml:space="preserve">
     <value>Réinitialiser</value>
   </data>
+  <data name="Completed" xml:space="preserve">
+    <value>Terminé</value>
+  </data>
 </root>
