--- a/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.resx
@@ -144,4 +144,7 @@
   <data name="Completed" xml:space="preserve">
     <value>Completed</value>
   </data>
+  <data name="Account progress unavailable" xml:space="preserve">
+    <value>Account progress unavailable</value>
+  </data>
 </root>
