--- a/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementTile.resx
@@ -135,16 +135,19 @@
   <data name="Open API" xml:space="preserve">
     <value>Open API</value>
   </data>
-  <data name="Stack Size" xml:space="preserve">
-    <value>Stack Size:</value>
-  </data>
-  <data name="Reset" xml:space="preserve">
-    <value>Reset</value>
-  </data>
   <data name="Completed" xml:space="preserve">
     <value>Completed</value>
   </data>
-  <data name="Account progress unavailable" xml:space="preserve">
-    <value>Account progress unavailable</value>
+  <data name="Achievement progress unavailable" xml:space="preserve">
+    <value>Achievement progress is unavailable; configure an API key with 'progression' scope and enable API permissions in the module settings.</value>
+  </data>
+  <data name="Daily achievement progress unavailable" xml:space="preserve">
+    <value>Daily achievements progress is unavailable</value>
+  </data>
+  <data name="Per-character achievement progress unavailable" xml:space="preserve">
+    <value>Per-character achievements progress is unavailable</value>
+  </data>
+  <data name="Weekly achievement progress unavailable" xml:space="preserve">
+    <value>Weekly achievements progress unavailable</value>
   </data>
 </root>
