Add section for uncategorized achievements

--- a/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementsTabView.es.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementsTabView.es.resx
@@ -123,4 +123,7 @@
   <data name="Search" xml:space="preserve">
     <value>Buscar:</value>
   </data>
+  <data name="Uncategorized" xml:space="preserve">
+    <value>Sin clasificar</value>
+  </data>
 </root>
