--- a/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementsTabView.de.resx
+++ b/src/ChatLinks/Resources/UI/Tabs/Achievements/AchievementsTabView.de.resx
@@ -123,4 +123,7 @@
   <data name="Search" xml:space="preserve">
     <value>Suchen ...</value>
   </data>
+  <data name="Uncategorized" xml:space="preserve">
+    <value>Nicht kategorisiert</value>
+  </data>
 </root>
